# python-freecell_solver

./: .coveragerc  .gitreview  .stestr.conf  CONTRIBUTING.rst  HACKING.rst  README.rst  python_pypi_dist_manager.py  setup.cfg  tox.ini
code/: CHANGELOG.rst.base.txt  README.part.rst
code/freecell_solver/: __init__.py
doc/source/: conf.py  index.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst
doc/source/configuration/: index.rst
doc/source/install/: common_configure.rst  common_prerequisites.rst  get_started.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  next-steps.rst  verify.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
freecell_solver/: __init__.py
releasenotes/source/: conf.py  index.rst
