[metadata]
name = freecell_solver
summary = Freecell Solver bindings
description-file =
    README.rst
author = Shlomi Fish
author-email =
home-page = https://fc-solve.shlomifish.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    freecell_solver

[compile_catalog]
directory = freecell_solver/locale
domain = freecell_solver

[update_catalog]
domain = freecell_solver
output_dir = freecell_solver/locale
input_file = freecell_solver/locale/freecell_solver.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = freecell_solver/locale/freecell_solver.pot
